--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "WEBhead10!",
+        "password": "password",
         "database": "exampledb",
         "host": "localhost",
         "dialect": "mysql"
